styled the form so that the textarea, <select> <option> menus, and text input fields would float to the right, and the text is left-aligned by default. added two <br>'s before the submit button because it was coming up too high and looked bad. I think I should shrink down the main div (class='wrapper', not container this time) maybe 40-80 pixels because the text fields are too far away from the words. still have to implement the hours popup pane, email list form page, the pdr page, and the contact us message form.

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,35 @@
+* {
+
+    color: black;
+    text-decoration: none;
+    margin: 0px auto 0px auto;
+    padding: 0px 5px 0px 5px;
+
+}
+
+h1,h3{
+    display: inline;
+}
 .wrapper {
 
-    margin: 0px auto 0px auto;
-    padding: 0px 0px 0px 0px;
-    width: 700px;
+    width: 600px;
     height: 670px;
 
 }
+
+ul li{
+    list-style-type: none;
+    float: left;
+    display: inline;
+    justify: space-between;
+}
+
+form input, form textarea, form select{
+
+    float: right;
+
+}
+
+#submit {
+    float: left;
+    position: absolute;
