added a ridge border-style css attribute to the <form> <fieldset> <legend> element

--- a/styles.css
+++ b/styles.css
@@ -33,3 +33,10 @@ form input, form textarea, form select{
 #submit {
     float: left;
     position: absolute;
+}
+
+legend {
+    
+    display: block;
+    border-style: ridge;
+}
