styled the form elements some more to make sure all the fields line up geometrically and I expanded the special notes tab because there was a bit of empty space that wasn't going over to well. also added :hover attributes to the <footer>'s <nav> element and the call and hours h3 elements

--- a/styles.css
+++ b/styles.css
@@ -29,20 +29,41 @@ ul li a:hover, h3:hover{
 
     background-color: lightgrey;
     color: red;
+    text-align: center;
 
 }
 
-form input, form textarea, form select{
+form input, form textarea, form select, p{
 
     float: right;
     display: inline-block;
+    margin: 0px;
+    padding: 0px;
 
+}
+
+p {
+    float: left;
+    display: inline;
+    margin-top: 20px;
+    margin-bottom: 18px;
+    margin-left: 0px;
+    padding-left: 0px;
+    padding-bottom: 2px;
+}
+
+textarea {
+    width: 65%;
+    display: inline-block;
+    margin-right: 20px;
+    float: right;
 }
 
 #submit {
     float: left;
-    display: block;
-    position: absolute;
+    text-align: center;
+    margin-bottom: 10px;
+    
 }
 
 legend {
